Lesson 8: Add products and attributes (web & api)
